# Codes_SOE

./: README.md  Relatorio.tex  echobot.c  ex1.sh
0Projeto/: controlePortao.c  foto.c  sensor.c  sensor.py  testes.txt
0Projeto/Reconhecimento/: CMakeLists.txt  main.cpp  reconhecimento  reconhecimento_caracteres.c
0Projeto/bot/: echobot.c
0Projeto/cam/: CMakeLists.txt  capture_image.cpp
latex/: test.tex
prova/: q1.c  q2.c  q4.c  q5.c
pv/: 2.c  last.c
testes/shell_script/: cals.sh  ex1.sh  ex3.sh  ex31.sh  sites.txt  up.sh
